# burpai-mitmproxy

./: .gitignore  .ruff.toml  README.md  burpai.spec  pyproject.toml
doc/: requests.md
src/: burp.py  conversation.py  llm.py  main.py  proxy_addon.py  responses.py  session_manager.py  settings.py  utils.py  vault.py
src/prompts/: __init__.py  explain.py  explore.py  montoya.py  prompt.py
src/tools/: __init__.py  tool.py
src/tools/burp/: __init__.py  intruder.py  repeater.py  reporter.py
src/tools/internal/: __init__.py  file.py  task.py
tests/: test_main.py  test_responses.py  test_settings.py  test_tools.py  test_utils.py  test_vault.py
